Add new parameters for modifying Access-Control-Allow-Origin in order to bypass CORS issues (tested with Chrome 101)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "no-cors-proxy": "bin/index.js"
   },
   "preferGlobal": true,
-  "keywords": ["http", "proxy", "web", "cors"],
+  "keywords": [
+    "http",
+    "proxy",
+    "web",
+    "cors"
+  ],
   "author": "Emanuele Longo",
   "license": "ISC",
   "dependencies": {
